feat: Improve mobile PWA installation experience
- Enhanced PWA manifest with separate icon purposes for better mobile support
- Added mobile-specific meta tags for various browsers and platforms
- Improved PWA install prompt with mobile detection and manual instructions
- Added fallback installation instructions for Chrome, Safari, and Firefox mobile
- Fixed icon purpose separation (maskable vs any) for better compatibility
- Added Microsoft Edge and Windows-specific PWA meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,14 @@
     <!-- Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#0ea5e9" />
+    <meta name="msapplication-TileColor" content="#0ea5e9" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Namaaz Tracker" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="Namaaz Tracker" />
+    <meta name="msapplication-tooltip" content="Track your daily Namaaz habits" />
+    <meta name="msapplication-starturl" content="/" />
     <meta
       name="description"
       content="Track your daily Namaaz habits and build spiritual discipline with prayer tracking, progress analytics, and community features."
