fix: Simplify PWA approach and Vercel configuration
- Remove complex Vercel routing configuration that was causing 401 errors
- Use simple regex-based rewrite that excludes files with extensions
- Update favicon references to use PNG icons for better compatibility
- Let Create React App handle static file serving naturally
- This should resolve both PWA install issues and Vercel deployment problems

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     
     <!-- Favicon and Icons -->
-    <link rel="icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/android-chrome-192x192.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/android-chrome-192x192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/android-chrome-512x512.png" />
     
