--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     
     <!-- Favicon and Icons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/android-chrome-192x192.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/android-chrome-192x192.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/android-chrome-192x192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/android-chrome-512x512.png" />
     
@@ -20,9 +19,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Namaaz Tracker" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="msapplication-TileColor" content="#0ea5e9" />
-    <meta name="msapplication-config" content="none" />
-    <meta name="application-name" content="Namaaz Tracker" />
     <meta
       name="description"
       content="Track your daily Namaaz habits and build spiritual discipline with prayer tracking, progress analytics, and community features."
